# is_prime

./: Cargo.toml  README.md
src/: lib.rs
