[package]
name    = "is_prime"
version = "1.0.2"
authors = ["Alfie John <alfie@alfie.wtf>"]

description   = "Fast arbitrary length prime number checker using the Miller-Rabin primality test algorithm"
documentation = "https://docs.rs/is_prime/"
repository    = "https://github.com/alfiedotwtf/is_prime"

license = "GPL-3.0/GFDL-1.3"

[dependencies]
ramp = "0.3.3"
