[package]
name        = "is_prime"
version     = "2.0.7"
authors     = ["Alfie John <alfie@alfie.wtf>"]
description = "Fast arbitrary length prime number checker using the Miller-Rabin primality test algorithm"
license     = "GPL-3.0/GFDL-1.3"

documentation = "https://docs.rs/is_prime/"
homepage      = "https://crates.io/crates/is_prime"
repository    = "https://github.com/alfiedotwtf/is_prime"
readme        = "README.md"

[dependencies]
num-bigint = "=0.4"
num-traits = "=0.2"
